# slgpu

./: .env.example  .gitattributes  .gitignore  AGENTS.md  HISTORY.md  README.md  docker-compose.both.yml  docker-compose.monitoring.yml  docker-compose.yml  main.env  main.env.example  slgpu
web/backend/: alembic.ini  pyproject.toml
web/backend/alembic/: env.py
web/backend/app/: __init__.py  main.py
web/backend/app/api/: deps.py
web/backend/app/core/: config.py  logging.py  security.py
web/backend/app/db/: base.py  session.py
web/backend/app/middleware/: __init__.py  request_log.py
web/backend/app/models/: __init__.py  app_log_event.py  audit.py  job.py  log_export.py  log_report.py  model.py  preset.py  run.py  service.py  setting.py  slot.py  stack_param.py
web/backend/app/schemas/: activity.py  app_logs.py  common.py  docker_logs.py  gpu.py  jobs.py  log_exports.py  log_reports.py  models.py  monitoring.py  presets.py  runtime.py  settings.py  slot.py
web/backend/app/services/: __init__.py  app_log_file.py  app_log_sink.py  app_settings.py  (+27 more)
web/backend/tests/: conftest.py  test_4_0_concurrency.py  test_api_smoke.py  test_app_log_sink.py  test_env_files.py  test_gpu_availability.py  test_gpu_state.py  test_jobs_runner.py  test_log_export.py  test_log_report.py  test_main_env.py  test_monitoring_dcgm.py  test_preset_clone.py  test_preset_import_env.py  test_preset_parameter_schema.py  test_security.py  test_slgpu_cli.py  test_slots_runtime.py  test_stack_config_sqlite_path.py  test_stack_registry_sgl_optional.py  test_vllm_data_parallel_alias.py
(+192 files in other folders)
