[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slgpu-web"
version = "8.2.10"
description = "Web control plane for the slgpu LLM inference benchmarking stand."
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Proprietary" }
authors = [{ name = "slgpu-web" }]
dependencies = [
  "fastapi>=0.115,<0.120",
  "python-multipart>=0.0.9,<0.1",
  "uvicorn[standard]>=0.30,<0.35",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "aiosqlite>=0.20,<0.21",
  "anyio>=4.4,<5.0",
  "httpx>=0.27,<0.29",
  "docker>=7.1,<8.0",
  "huggingface_hub>=0.26,<1.0",
  "tqdm>=4.66,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<0.25",
  "ruff>=0.6,<0.8",
  "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
